# safe-udp

./: .gitignore  CMakeLists.txt  diff.sh
docker/scripts/: safeudp_docker_into.sh  saftudp_docker_run.sh
files/client_files/: 天龙八部.txt  射雕英雄传.txt
files/server_files/: 倚天屠龙记.txt  射雕英雄传.txt
test/: CMakeLists.txt  client.cpp  server.cpp
udp_transport/: CMakeLists.txt  buffer.h  data_segment.cpp  data_segment.h  packet_statistics.cpp  packet_statistics.h  sliding_window.cpp  sliding_window.h  udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
